[package]
name = "mos-6502kit"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[dependencies]
cpu = { path = "../cpu" }
memory = { path = "../memory" }
display = { path = "../display" }
input = { path = "../input" }
debugger = { path = "../debugger"}
assembler = { path = "../assembler" }
disassembler = { path = "../disassembler" }
common = { path = "../common" }
breadboard = { path = "../breadboard" }
